Update success and error alert backgrounds to new approved colors to fix contrast
These both had color-contrast issues with primary-colored links and such

--- a/packages/docs/static/themes/cmsgov-theme.css
+++ b/packages/docs/static/themes/cmsgov-theme.css
@@ -8,9 +8,9 @@
 --accordion-button__color: #262626;
 --accordion-content__background-color: #ffffff;
 --alert__background-color: #e7e9f5;
---alert__background-color--error: #fce8ec;
+--alert__background-color--error: #fef5f7;
 --alert__background-color--lightweight: #ffffff;
---alert__background-color--success: #e7f3e7;
+--alert__background-color--success: #f6faf5;
 --alert__background-color--warn: #fffce6;
 --alert__border-left-color: #0d2499;
 --alert__border-color--error: #e31c3d;
@@ -378,7 +378,7 @@
 --color-border: #d9d9d9;
 --color-border-dark: #0f1e38;
 --color-border-inverse: #ffffff;
---color-error-lightest: #fce8ec;
+--color-error-lightest: #fef5f7;
 --color-error-lighter: #f7bbc5;
 --color-error-light: #f18e9e;
 --color-error: #e31c3d;
@@ -424,7 +424,7 @@
 --color-info-dark: #0c208a;
 --color-info-darker: #09196b;
 --color-info-darkest: #07124d;
---color-success-lightest: #e7f3e7;
+--color-success-lightest: #f6faf5;
 --color-success-lighter: #b8dcb7;
 --color-success-light: #59ac56;
 --color-success: #12890e;
